Bug 545518 -  [12] Flow analysis is skipped for multi-constant case statement
Change-Id: Ie669650b7742cad52b60cad6b1f508a420e8cf67
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>